--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./style.css" />
+        <title>Bootstrap CSS framework</title>
+    </head>
+    <body>
+        <section
+            class="container d-flex justify-content-center align-items-center d-flex justify-content-center align-items-center text-center">
+            <div class="row">
+                <div class="rectangle-red col-sm-6 col-md-4 col-xl">1</div>
+                <div class="rectangle-orange col-sm-6 col-md-4 col-xl">2</div>
+                <div class="rectangle-yellow col-sm-6 col-md-4 col-xl">3</div>
+                <div class="rectangle-green col-sm-6 col-xl">4</div>
+                <div class="rectangle-blue col-md-6 col-xl">5</div>
+            </div>
+        </section>
+    </body>
 </html>
