--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <title>Bootstrap CSS framework</title>
     </head>
     <body>
-        <section
-            class="container d-flex justify-content-center align-items-center d-flex justify-content-center align-items-center text-center">
+        <section class="container d-flex justify-content-center align-items-center text-center">
             <div class="row">
                 <div class="rectangle-red col-sm-6 col-md-4 col-xl">1</div>
                 <div class="rectangle-orange col-sm-6 col-md-4 col-xl">2</div>
